<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondaryLight"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout_company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimaryLight"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView_circular_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/circular_company"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_circular_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_name" />

                    <TextView
                        android:id="@+id/textView_circular_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_address" />

                    <TextView
                        android:id="@+id/textView_circular_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_details" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryLight"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/circular_job"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_circular_nature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_nature" />

                    <TextView
                        android:id="@+id/textView_circular_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_category" />

                    <TextView
                        android:id="@+id/textView_circular_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_location" />

                    <TextView
                        android:id="@+id/textView_circular_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_description" />

                    <TextView
                        android:id="@+id/textView_circular_salary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_salary" />

                    <TextView
                        android:id="@+id/textView_circular_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_deadline" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimaryLight"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/circular_requirements"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_circular_degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_degree" />

                    <TextView
                        android:id="@+id/textView_circular_experience"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circular_experience" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_circular_interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="interest"
                    android:text="@string/circular_interest" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>