<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_register_employer_step1_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_fields"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText_register_employer_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_employer_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_register_employer_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editText_register_employer_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editText_register_employer_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_employer_details"
            android:inputType="text" />

        <Button
            android:id="@+id/button_register_employer_step1_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="Employer1"
            android:text="@string/button_next"
            android:textAlignment="center"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>
