<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_register_employee_step1_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_fields"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editText_register_employee_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_employee_name"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/radioGroup_register_employee_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_sex_male"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_register_employee_sex_male" />

            <RadioButton
                android:id="@+id/radioButton_sex_female"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/radio_register_employee_sex_female" />

        </RadioGroup>

        <EditText
            android:id="@+id/editText_register_employee_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editText_register_employee_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/editText_register_phone"
            android:inputType="phone" />

        <DatePicker
            android:id="@+id/datePicker_register_employee_birthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:maxDate="12/31/2000" />

        <Button
            android:id="@+id/button_register_employee_step1_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="Employee1"
            android:text="@string/button_next"
            android:textAlignment="center"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>
